spacing fixed

--- a/app/assets/stylesheets/components/_header3.scss
+++ b/app/assets/stylesheets/components/_header3.scss
@@ -17,7 +17,7 @@
     // white-space: nowrap;
     a {
       color: $blue !important;
-      margin: 0 5vw;
+      // margin: 0 5vw;
     }
   }
   #titles {
